--- a/mydefinitions.tex
+++ b/mydefinitions.tex
@@ -88,6 +88,7 @@
 % \newcommand{\diag}{\textnormal{diag}}
 \newcommand{\vstack}[1]{\Xib_{#1}}
 \newcommand{\diag}[1]{\Ld_{#1}}
+% \newcommand{\diag}[1]{\D_{#1}}
 \newcommand{\tnsr}[2]{\underline{\mathsf{#1}}_{#2}}
 \newcommand{\tmult}[1]{\underset{#1}{\times}}
 
